refactor: 출력 기능 OutputHandler로 분리